--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,13 +16,14 @@ services:
     networks: 
     - registry
   docker-registry-frontend:
-    image: "konradkleine/docker-registry-frontend"
+    image: "konradkleine/docker-registry-frontend:v2"
     ports:
     - 127.0.0.1:8080:80
     environment:
     - ENV_DOCKER_REGISTRY_HOST=registry
     - ENV_DOCKER_REGISTRY_PORT=5000
     - ENV_DOCKER_REGISTRY_USE_SSL=1
+    - ENV_MODE_BROWSE_ONLY=false
     restart: always
     container_name: registry-frontend
     networks: 
