--- a/auth/nginx.conf
+++ b/auth/nginx.conf
@@ -8,8 +8,8 @@ http {
     server registry:5000;
   }
 
-  upstream docker-registry-frontend {
-    server registry-frontend:80;
+  upstream docker-registry-web {
+    server registry-web:8080;
   }
 
   ## Set a variable to help us decide if we need to add the
@@ -48,7 +48,7 @@ http {
     chunked_transfer_encoding on;
 
     location / {
-      proxy_pass                          http://docker-registry-frontend;
+      proxy_pass                          http://docker-registry-web;
       proxy_set_header  Host              $http_host;   # required for docker client's sake
       proxy_set_header  X-Real-IP         $remote_addr; # pass on real client's IP
       proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
